fixed layout issue, added actions to table

--- a/packages/src/components/Pagination/pagination.module.scss
+++ b/packages/src/components/Pagination/pagination.module.scss
@@ -11,3 +11,13 @@
     background-color: $pagination-color !important;
   }
 }
+
+.disabled {
+  :global(.MuiPaginationItem-root) {
+    color: $disabled-text-color;
+  }
+
+  :global(.Mui-selected) {
+    background-color: $disabled-pagination-color !important;
+  }
+}
