--- a/packages/src/modules/Layout/layout.module.scss
+++ b/packages/src/modules/Layout/layout.module.scss
@@ -16,5 +16,6 @@
     padding: 1.25rem;
     border-radius: 2rem;
     background-color: $main-bg-color;
+    overflow-y: scroll;
   }
 }
