--- a/packages/src/styles/colors.scss
+++ b/packages/src/styles/colors.scss
@@ -32,5 +32,7 @@ $table-bg-color: #01032066;
 $table-row-color: #8142d311;
 $table-row-hover-color: #8142d344;
 $pagination-color: #8142d344;
+$disabled-pagination-color: #8142d322;
+$disabled-text-color: #e8e6e355;
 
 $input-field-color: #e3c4ff;
